Improve explanations for visualize with holoviews.

--- a/contributed/visualize_with_holoviews.ipynb
+++ b/contributed/visualize_with_holoviews.ipynb
@@ -49,6 +49,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Parquet\n",
+    "\n",
+    "Parquet is a column-based storage format that's part of a wider Arrow project to provide standardized, high-performance data representations in memory and on disk.  It's commonly used in current data science and large data volume processing, and is the current selected standard for Rubin Observatory LSST Data Management on-disk representations of output data catalogs."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dask\n",
+    "\n",
+    "Dask allows us to do processing by dividing tasks into individual workers.  These workers allow us to take fuller use of available memory and processors, including those on other machines.\n",
+    "\n",
+    "Dask is solving the needs to:\n",
+    "\n",
+    "1. Load more data than fit into memory. You can delay this in either time or space.\n",
+    "   * Delaying in time would be if you running on a memory-limited machine, then Dask will be able to chunk through the work units without simultaneously needing the full amount of memory to hold all of the data at once.\n",
+    "   * Delaying in space means spinning up additional machines.  This is often particularly powerful when connecting your front-end machine (e.g., a NERSC JupyterHub job is limited to 42 GB memory), to several full cluster compute nodes (e.g., a NERSC Haswell node is 32 real cores, 128 GB).  \n",
+    "\n",
+    "2. Distributing work across multiple processors. Python and numpy/scipy are not naturally parallel or easily parallelizable. One of the common things we will do with large datasets is aggregate for both analysis and visualization. Being able to do this aggregation in parallel is a significant gain.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### HoloViews\n",
+    "\n",
+    "HoloViews is Dask aware and can provide Dask the correct information to build a Task Graph that effectively parallelizes the requisite data loading and computation.  HoloViews can use either bokeh or matplotlib backends.  If you directly use the matplotlib backend with a Dask DataFrame it will not appropriately parallelize across the workers and instead do lots of stuff in serial.  Bokeh also gives some nice interactive capabilities and HoloViews knows how to appropriate set up the linking and call backs to enable coordinated zooming and selection."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -61,6 +97,13 @@
     "import datashader as ds\n",
     "import holoviews as hv\n",
     "from holoviews.operation.datashader import datashade, shade, dynspread, rasterize"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We here specify that we want to use HoloViews with the Bokeh backend.  You could also use a matplotlib backend."
    ]
   },
   {
@@ -84,7 +127,9 @@
    "metadata": {},
    "source": [
     "For simple testing and illustration of how to use dask, holoview, and datashader here you can run locally on just one tract.\n",
-    "To run on the full set of DR6, you'll need to set up a node to support Dask distributed.  Basically you just need a machine that can hold the data in memory."
+    "To run on the full set of DR6, you'll need to set up a node to support Dask distributed.\n",
+    "\n",
+    "Dask allows us to shift processing in either time or space (other machines).  Basically you just need a machine that can hold the data in memory."
    ]
   },
   {
@@ -189,13 +234,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We define a directory path that contains all of the individual Parquet files.  If we want to read just one tract, we could pass the full path name of just the tract.  If we wanted to specify a set of tracts to run, we could pass in a regex that matches those tracts.  Or we could pass in a list that contained the file paths or directory paths to read from."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_release = \"dr6a\"\n",
-    "datafile = f\"/global/cfs/cdirs/lsst/shared/DC2-prod/Run2.2i/dpdd/Run2.2i-{data_release}/dc2_object_run2.2i_{data_release}\""
+    "data_path = f\"/global/cfs/cdirs/lsst/shared/DC2-prod/Run2.2i/dpdd/Run2.2i-{data_release}/dc2_object_run2.2i_{data_release}\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Parquet is a column-based storage format.  If we specify the columns we want to load, then we avoid the memory overhead of having to store the other columns.\n",
+    "\n",
+    "Note: In principle Dask should be able to figure out what columns we actually used and only used those.\n",
+    "    1. This just doesn't actually work using the `pyarrow` engine.  It loads the entire set of columns.\n",
+    "    2. If we have enough memory to do so, we want to persist the subset of columns that we do use in memory.  Dask is going to compute a new task graph for each plot and if we don't help it out and tell it that we want to keep those columns around, it would otherwise completely re-read all of the files."
    ]
   },
   {
@@ -207,7 +270,7 @@
     "# Specify the columns we need.  This allows for significant performance advantages when reading a column-based storage format such as Parquet.\n",
     "columns_to_read = ['ra', 'dec', 'mag_g', 'mag_r', 'mag_i',\n",
     "                   'magerr_g', 'magerr_r', 'magerr_i', 'extendedness']\n",
-    "df = dd.read_parquet(datafile, columns=columns_to_read, engine='pyarrow')"
+    "df = dd.read_parquet(data_path, columns=columns_to_read, engine='pyarrow')"
    ]
   },
   {
