Explain CSCRATCH, and plot linking better.

--- a/contributed/visualize_with_holoviews.ipynb
+++ b/contributed/visualize_with_holoviews.ipynb
@@ -138,12 +138,15 @@
    "source": [
     "### Start a Dask Cluster on an Interactive Node\n",
     "\n",
-    "Move to your SCRATCH directory to simplify file locking.  (On NERSC, the `SCRATCH` environment variable points to an individual SCRATCH area for each user.)\n",
+    "Move to your CSCRATCH directory to simplify file locking.  (On NERSC, the `CSCRATCH` environment variable points to an individual CSCRATCH area for each user.  We use `CSCRATCH` instead of `SCRATCH` because `CSCRATCH` will be guaranteed to be defined on all compute, login, and interactive nodes)\n",
+    "\n",
+    "In a separate Terminal on Cori (a JupyterHub Terminal works fine)\n",
+    "\n",
     "```\n",
-    "cd $SCRATCH/\n",
+    "cd $CSCRATCH/\n",
     "```\n",
     "\n",
-    "In a separate Terminal on Cori (a JupyterHub Terminal works fine), ask for a Node from the `interactive` queue.  This generally completes in seconds.\n",
+    "The ask for a Node from the `interactive` queue.  This generally completes in seconds.\n",
     "```\n",
     "salloc -N 1 -C haswell --qos=interactive -t 04:00:00\n",
     "```\n",
@@ -156,7 +159,7 @@
     "And then start up the Dask Cluster\n",
     "```\n",
     "NUM_WORKERS=16\n",
-    "SCHEDULER_FILE=${SCRATCH}/scheduler.json\n",
+    "SCHEDULER_FILE=${CSCRATCH}/scheduler.json\n",
     "rm -rf ${SCHEDULER_FILE}\n",
     "dask-scheduler --scheduler-file ${SCHEDULER_FILE} &\n",
     "dask-worker --nprocs ${NUM_WORKERS} --scheduler-file ${SCHEDULER_FILE} &\n",
@@ -427,7 +430,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The color-magnitude and color-color plots will zoom together.  The synchronized range zooming is just based on matching the range of g-r. it's not subsetting the points in the view.  Thus there is no relationship between the RA, Dec plot and the other plots.\n",
+    "The magerr-mag plot and color-magnitude plot will zoom together based on the `mag_g` selection range.\n",
+    "The color-magnitude and color-color plots will zoom together based on the `g-r` selection range.\n",
     "\n",
     "Related to this, I don't know how to invert the mag_g axis in the middle plot without also inverting the mag_g axis in the left plot and without breaking the shared axes selections.  One can `color_mag.opts(invert_yaxis=True)`, but that would not just invert the `mag_magerr` plot axis, which would be annoying, but even worse it would invert the linked selection to be 28 < mag_g < 14, which is the empty set."
    ]
