Explain that Classic Jupyter will re-raster, but JupyterHub won't.

--- a/contributed/visualize_with_holoviews.ipynb
+++ b/contributed/visualize_with_holoviews.ipynb
@@ -21,7 +21,9 @@
     "\n",
     "Logistics:\n",
     "\n",
-    "1. These tests were conducted on NERSC through the https://jupyter.nersc.gov interface.\n",
+    "1. These tests were conducted on NERSC through the https://jupyter.nersc.gov interface.  \n",
+    "Note: To enable re-rastering when zooming, use the JupyterLab Classic interface.\n",
+    "You can launch this from an active JupyterHub Notebook by selecting \"Help->Launch Classic Notebook\".\n",
     "\n",
     "2. Requires:\n",
     "```\n",
@@ -378,6 +380,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note:\n",
+    "\n",
+    "* If you are viewing this through a direct JupyterLab connection (Jupyter Classic Notebook, or separately on your own machine or setup), the plot will re-raster as you zoom in and out.  This functionality is not available within the JupyterHub environment.  JupyterHub doesn't allow the JavaScript callbacks in the browser back to the server that are necessary to do the re-rastering."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -582,6 +593,13 @@
    "outputs": [],
    "source": [
     "dynamic_mag_magerr + dynamic_color_mag + dynamic_color_color"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The datashaded plots re-raster as you zoom, but the hover-over aggregation box size remains at its original size."
    ]
   },
   {
